api-accidents/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accidents-api
  namespace: xconnected
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accidents-api
  template:
    metadata:
      labels:
        app: accidents-api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: accidents-api
        image: xconnected/components:accidents-api-3.0
        imagePullPolicy: Always
        ports:
          - containerPort: 8003
        volumeMounts:
          - mountPath: "/media"
            name: media-volume
      volumes:
        - name: media-volume
          persistentVolumeClaim:
            claimName: accidents-api-pvc
