api-accidents/service.yml
apiVersion: v1
kind: Service
metadata:
  name: accidents-api
  namespace: xconnected
spec:
  selector:
    app: accidents-api
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
